Add backend server setup with MongoDB connection and basic routing

--- a/.gitignore
+++ b/.gitignore
@@ -1813,3 +1813,4 @@ backend/node_modules/whatwg-url/lib/URLSearchParams-impl.js
 backend/node_modules/whatwg-url/lib/URLSearchParams.js
 backend/node_modules/whatwg-url/lib/utils.js
 backend/node_modules/whatwg-url/lib/VoidFunction.js
+backend/.env
